--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Stáhněte si YouTube video</h1>
-    <form action="https://youtubedownload-ny41.onrender.com" method="post">
+    <form action="https://youtubedownload-ny41.onrender.com/download" method="post">
         <label for="video_url">YouTube video URL:</label><br>
         <input type="text" id="video_url" name="video_url" required><br><br>
         <label for="password">Heslo:</label><br>
